<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">iGlass</string>

    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>
    <string name="title_activity_test_result">TestResult</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calibrate">Calibrate!</string>
    <string name="reset">Reset</string>
    <string name="averageEyeDistance">Avg. Eye Distance</string>
    <string name="processTime">Process Time</string>
    <string name="currentDistance">Distance</string>
    <string name="confidence">Confidence</string>
    <string name="changeSize">Size</string>
    <string name="choose_cam_size">Choose Cam. Size</string>
    <string name="lastEyeDistance">Last eye dist.</string>
    <string name="changeAvgNum">Avg. Num.</string>
    <string name="measurementsLeft">Measurements left</string>
    <string name="finishAndSend">Send!</string>
    <string name="showMiddlePoint">Middle eye point</string>
    <string name="showEyePoints">Eye points</string>

    <!-- 	Start Page -->
    <string name="ProbantName">Probant Name:</string>
    <string name="CamResolution">Camera Resolution</string>
    <string name="AverageMeasurementNum">Avg. Meas. Num.</string>
    <string name="CalibrationDistance">Calibration Distance</string>
    <string name="StartMeasurement">Start Measurement</string>
    <string name="fillIn">Fill out !</string>

    <!-- 	Image desctriptions -->
    <string name="processedFrameDesctiption">Last processed frame</string>

    <!-- 	Colors -->
    <color name="white">#FFFFFF</color>
    <color name="red">#FF0000</color>
    <color name="green">#00FF00</color>
    <color name="yellow">#FFFF00</color>
</resources>