<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity" >

    <!-- Height + width will be set in the main activity -->
    <com.example.iGlass.CameraSurfaceView
        android:id="@+id/surface_camera"
        android:layout_height="0dip"
        android:layout_width="0dip"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/currentDistance"/>

    <TextView
        android:id="@+id/currentDistance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:text="@string/currentDistance"/>

    <Button
        android:id="@+id/calibrateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/nextButton"
        android:layout_marginBottom="70dp"
        android:background="@drawable/red_button"
        android:text="@string/calibrate"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:enabled="false"
        android:text="PROCEED"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:text="@string/reset"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/surface_camera"
        android:layout_alignParentBottom="true"
        android:layout_alignBottom="@id/surface_camera"
        android:layout_centerHorizontal="true">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/showMiddlePoint"
            android:checked="true" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/showEyePoints"
            android:checked="false" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="14dp"
            android:textSize="12sp"
            android:text="Face the screen and press Calibrate to proceed. Press Reset to repeat calibration."
            android:textColor="#000000" />

    </LinearLayout>

</RelativeLayout>